# n-body-problem

./: .gitignore  CMakeLists.txt  README.md  README.nemo  RF.sh  RF1.sh  RF2.sh  cluster.sh
RL_plot/: RL1.sh  RL2.sh  RL_cluster1.sh  RL_parallel.py  RL_sequential.py  barnes-sequential-balanced.plotData  barnes-sequential-one-sided.plotData  naive-parallel-one-sided.plotData  naive-sequential-one-sided.plotData
RL_plot/parallel/FP_OPS/: naive-parallel-one-sided.data
RL_plot/parallel/L3_TCM/: 4proc.out  barnes-parallel-one-sided.data
RL_plot/parallel/TOT_CYC/: barnes-parallel-balanced.data  barnes-parallel-one-sided.data  naive-parallel-one-sided.data
RL_plot/sequential/L3_TCM/: barnes-parallel-balanced.data  barnes-parallel-one-sided.data  naive-parallel-one-sided.data
RL_plot/sequential/TOT_CYC/: barnes-parallel-balanced.data  barnes-parallel-one-sided.data
eulerRuns/barnes/balanced_one_sided/: plotData0.txt  plotData1.txt  plotData10.txt  plotData11.txt  plotData12.txt  plotData13.txt  plotData14.txt  plotData15.txt  plotData16.txt  plotData17.txt  plotData18.txt  plotData19.txt  plotData2.txt  plotData20.txt  plotData21.txt  plotData22.txt  plotData23.txt  plotData24.txt  plotData25.txt  plotData26.txt  plotData27.txt  plotData28.txt  plotData29.txt  plotData3.txt  plotData30.txt  plotData31.txt  plotData32.txt  plotData33.txt  plotData34.txt  plotData35.txt  plotData36.txt  plotData37.txt  plotData38.txt  plotData39.txt  plotData4.txt  plotData40.txt  plotData41.txt  plotData42.txt  plotData43.txt  plotData44.txt  (+8 more)
eulerRuns/barnes/balanced_parallel/: plotData1M.txt  plotData2M.txt  plotData500k.txt  plotDataTeliko.txt
eulerRuns/naive/: naiveAvx256.txt  naiveParallel1.txt  naiveParallel2.txt  naiveParallel4.txt  naiveParallel8.txt  naiveSequential.txt  naive_parallelAvx256.txt  naive_parallelonesided.txt
eulerRuns/paper/naive/: 131k_parallel_avx_256.txt
papers/: links.txt
report/: bibl_conf.bib  report.tex  test.sh
report/figs/: 130kComparison.eps  500k025EXEC.eps  500k05Comparison.eps  500k05EXEC.eps  SpeedupNew.eps  barnes.eps  domain2.eps  equal_area.eps  equal_no_particles.eps  equal_work.eps  gadget_benchmark.eps  roofline.eps  speedup.eps  total.eps  tree.eps  weak.eps
results/benchmarks/naive/: 131k_parallel.txt
results/roofline_benchmark/: RL.gp  RL.py  RL.sh  RL2.sh  RL3.sh  RL_bckp.gp  barnes-parallel-balanced.plotData  barnes-parallel-one-sided.plotData  code.py
scripts/: compare.py  data.txt  errorbars.py  exectime_plot.py  plot_time.py  strong.py  test.txt
scripts/plots/: speedup.eps
src/: .dynamic_window.cpp.swp  CMakeLists.txt  plot.gnu  seqDummy2.cpp
src/barnes/2ndImplementation/: CMakeLists.txt  main.cpp  octree.cpp  octree.hpp  serialization.cpp  serialization.hpp
src/barnes/oldVersions/parallel/: CMakeLists.txt  main.cpp
src/barnes/oldVersions/sequential/: main_RF.cpp  octree.cpp  octree.hpp
src/barnes/parallel/: CMakeLists.txt  main.cpp  main_RF.cpp  octree.cpp  octree.hpp
src/barnes/parallel_balanced/: CMakeLists.txt  main.cpp  main_RF.cpp
src/barnes/parallel_equal_particles/: CMakeLists.txt  CMakeLists_papi.txt  main.cpp  mainCommunication.cpp  mainpalio.cpp  serialization.hpp
src/barnes/parallel_equal_work/: CMakeLists.txt  CMakeLists_papi.txt  main.cpp  main_RF.cpp  main_orig.cpp  serialization.cpp  serialization.hpp
src/barnes/parallel_one_sided/: CMakeLists.txt  main.cpp  main_RF.cpp  maintest.cpp  octree.cpp  octree.hpp  serialization.cpp  serialization.hpp
src/barnes/parallel_serialization/: CMakeLists.txt  main.cpp  serialization.cpp  serialization.hpp  test  test.cpp
src/barnes/sequential/: CMakeLists.txt  Makefile  main.cpp  main_RF.cpp  octree.cpp  octree.hpp  quadtree.hpp
src/barnesHut/: Makefile  quadtree.cpp  quadtree.hpp  seqBarnesHut.cpp
src/barnesHutNoCapacity/: plot.gnu  quadtree.cpp  quadtree.hpp  seqBarnesHut.cpp
src/barnesHutNoCapacity/parallel/: quadtree.cpp  quadtree.hpp
src/fortranCode/: .seqFortran.f90.swp  a.out  initial.txt  plot.txt  seqFortran.f90
src/naive/: Makefile  array2d.hpp  initialization.cpp  initialization.h  initialization.hpp  parallel.cpp  parallel_inplace.cpp  parallel_onesided.cpp  plot.text  sequential.cpp  sphere.cpp
src/naive/avx256/: CMakeLists.txt  main.cpp
src/naive/avx512/: CMakeLists.txt  main.cpp  mainm.cpp
src/naive/olderVersions/parallel/: CMakeLists.txt  main.cpp  main_amdahl.cpp  plotData.txt
src/naive/parallel/: CMakeLists.txt  CMakeLists_papi.txt  main.cpp  main_RF.cpp  parallel.cpp  test
src/naive/parallel_avx256/: CMakeLists.txt  main.cpp
src/naive/parallel_inplace/: CMakeLists.txt  main.cpp  parallel_inplace.cpp
src/naive/parallel_one_sided/: CMakeLists.txt  main.cpp  main_RF.cpp
src/naive/sequential/: CMakeLists.txt  main.cpp  main256.cpp  main512.cpp  main_RF.cpp  main_int.cpp  main_intrinsic.cpp
src/python_script_results/: communictime_plot.py  compare.py  exectime_plot.py  plot_time.py  script.py  speedup_plot.py
src/python_script_results/plots/: communictime.eps  exectime.eps
src/testing_tree_dynamic_window/: dynamic_window.cpp  main.cpp
src/tree_struct/: mpiTypeOctree.cpp
src/updatedSeq/: initialization.cpp  initialization.h  prog  sequential.cpp
src/utils/: args.cpp  args.hpp  boxComputation.cpp  boxComputation.hpp  data_conversion  energy.cpp  energy.hpp  initialization.cpp  initialization.hpp  io.cpp  io.hpp  sort.cpp  sort.hpp  types.hpp
test/: run.sh
test/resources/: figure8.txt  solar_system.txt  tab8096.txt
test/resources/datasets/: galaxy32768_ball.txt  solar_system.txt
test/resources/expected/: figure8.txt.out  solar_system.txt.out
test/resources/nemo_testsets/: galaxy100.snap  galaxy1000_cusp.snap  galaxy1000_shell.snap  galaxy100_ball.snap  galaxy1024_ball.snap  galaxy1024_cusp.snap  galaxy500_ball.snap  galaxy500_cusp.snap  galaxy500_shell.snap  galaxy512_ball.snap
test/resources/testsets/: figure8.snap  galaxy100.txt  galaxy1000_ball.snap  galaxy1000_ball.txt  galaxy1000_cusp.txt  galaxy1000_shell.txt  galaxy100_ball.txt  galaxy100_cusp.snap  galaxy100_cusp.txt  galaxy128_ball.txt  (+32 more)
(+1788 files in other folders)
